--- a/d/Makefile
+++ b/d/Makefile
@@ -13,13 +13,14 @@ ENTRYOFFSET	=   0x400
 # Programs, flags, etc.
 ASM		= nasm
 DASM		= objdump
-CC		= gcc
+# CC		= gcc -g
+ CC		= gcc
 LD		= ld
 ASMBFLAGS	= -I boot/include/
 ASMKFLAGS	= -I include/ -I include/sys/ -f elf
-CFLAGS		= -I include/ -I include/sys/ -c -fno-builtin -Wall
+CFLAGS		= -I include/ -I include/sys/ -c -fno-builtin -Wall -m32
 #CFLAGS		= -I include/ -c -fno-builtin -fno-stack-protector -fpack-struct -Wall
-LDFLAGS		= -Ttext $(ENTRYPOINT) -Map krnl.map
+LDFLAGS		= -Ttext $(ENTRYPOINT) -Map krnl.map -m elf_i386
 DASMFLAGS	= -D
 ARFLAGS		= rcs
 
