--- a/d/command/Makefile
+++ b/d/command/Makefile
@@ -5,14 +5,16 @@ HD		= ../80m.img
 
 ASM		= nasm
 DASM		= objdump
-CC		= gcc
+CC		= gcc -g
+# CC		= gcc
 LD		= ld
 ASMFLAGS	= -I ../include/ -f elf
-CFLAGS		= -I ../include/ -c -fno-builtin -fno-stack-protector -Wall
-LDFLAGS		= -Ttext 0x1000
+CFLAGS		= -I ../include/ -c -fno-builtin -fno-stack-protector -Wall -m32
+LDFLAGS		= -Ttext 0x1000 -m elf_i386
 DASMFLAGS	= -D
 LIB		= ../lib/orangescrt.a
 BIN		= echo pwd
+# BIN		= echo
 
 # All Phony Targets
 .PHONY : everything final clean realclean disasm all install
@@ -21,8 +23,10 @@ BIN		= echo pwd
 everything : $(BIN)
 
 install : all clean
-	cp ../kernel.bin ./ -v
-	tar vcf inst.tar kernel.bin $(BIN)
+	# cp ../kernel.bin ./ -v
+	cp ../xxd.sh ./ -v
+	# tar vcf inst.tar xxd.sh kernel.bin  $(BIN)
+	tar vcf inst.tar  $(BIN)
 	dd if=inst.tar of=$(HD) seek=`echo "obase=10;ibase=16;(\`egrep -e '^ROOT_BASE' ../boot/include/load.inc | sed -e 's/.*0x//g'\`+\`egrep -e '#define[[:space:]]*INSTALL_START_SECT' ../include/sys/config.h | sed -e 's/.*0x//g'\`)*200" | bc` bs=1 count=`ls -l inst.tar | awk -F " " '{print $$5}'` conv=notrunc
 
 all : realclean everything
