--- a/c/Makefile
+++ b/c/Makefile
@@ -17,7 +17,7 @@ CC		= gcc
 LD		= ld
 ASMBFLAGS	= -I boot/include/
 ASMKFLAGS	= -I include/ -I include/sys/ -f elf
-CFLAGS		= -I include/ -I include/sys/ -c -fno-builtin -Wall -m32
+CFLAGS		= -I include/ -I include/sys/ -c -fno-builtin -Wall -m32 -g
 #CFLAGS		= -I include/ -c -fno-builtin -fno-stack-protector -fpack-struct -Wall
 LDFLAGS		= -Ttext $(ENTRYPOINT) -Map krnl.map -m elf_i386
 DASMFLAGS	= -D
