--- a/d/command/Makefile
+++ b/d/command/Makefile
@@ -1,12 +1,11 @@
-# commands/Makefile
+
 
 #ENTRYPOINT	= 0x1000
 HD		= ../80m.img
 
 ASM		= nasm
 DASM		= objdump
-CC		= gcc -g
-# CC		= gcc
+CC		= gcc
 LD		= ld
 ASMFLAGS	= -I ../include/ -f elf
 CFLAGS		= -I ../include/ -c -fno-builtin -fno-stack-protector -Wall -m32
@@ -23,9 +22,8 @@ BIN		= echo pwd
 everything : $(BIN)
 
 install : all clean
-	# cp ../kernel.bin ./ -v
-	cp ../xxd.sh ./ -v
-	# tar vcf inst.tar xxd.sh kernel.bin  $(BIN)
+	cp ../kernel.bin ./ -v
+	# tar vcf inst.tar kernel.bin $(BIN)
 	tar vcf inst.tar  $(BIN)
 	dd if=inst.tar of=$(HD) seek=`echo "obase=10;ibase=16;(\`egrep -e '^ROOT_BASE' ../boot/include/load.inc | sed -e 's/.*0x//g'\`+\`egrep -e '#define[[:space:]]*INSTALL_START_SECT' ../include/sys/config.h | sed -e 's/.*0x//g'\`)*200" | bc` bs=1 count=`ls -l inst.tar | awk -F " " '{print $$5}'` conv=notrunc
 
